[package]
name = "solana-nft-program"
version = "0.1.0"
edition = "2021"
description = "A Solana smart contract for creating NFTs with title, body, and IPFS image link."
license = "MIT OR Apache-2.0"
homepage = "https://example.com"
repository = "https://github.com/example/solana-nft-program"
documentation = "https://docs.example.com/solana-nft-program"
keywords = ["solana", "blockchain", "nft", "rust"]

[dependencies]
solana-program = "1.11.0"
borsh = { version = "0.9", features = ["std"] }
borsh-derive = "0.9"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
